# libkepler.rs

./: Cargo.toml
.github/workflows/: tests.yml
crates/libkepler/: Cargo.toml
crates/libkepler-householder/: Cargo.toml
crates/libkepler-householder-macro/: Cargo.toml
crates/libkepler-householder-macro/src/: lib.rs
crates/libkepler-householder/src/: lib.rs
crates/libkepler-householder/tests/: test_horner.rs  test_householder.rs
crates/libkepler-proc-macro/: Cargo.toml
crates/libkepler-proc-macro/src/: lib.rs
crates/libkepler-proc-macro/tests/: test_expand_to_order.rs
crates/libkepler/src/: horner.rs  householder.rs  lib.rs  refiner.rs  starter.rs
src/: lib.rs
