[workspace]
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
authors = ["Dan Foreman-Mackey <dfm@dfm.io>"]
edition = "2021"
homepage = "https://github.com/dfm/libkepler.rs"
repository = "https://github.com/dfm/libkepler.rs"
license = "Apache-2.0"

[workspace.dependencies]
libkepler-proc-macro = { path = "crates/libkepler-proc-macro" }
