[workspace]
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
authors = ["Dan Foreman-Mackey <dfm@dfm.io>"]
edition = "2021"
homepage = "https://github.com/dfm/libkepler.rs"
repository = "https://github.com/dfm/libkepler.rs"
license = "Apache-2.0"

[workspace.dependencies]
num-traits = "0.2.16"
approx = "0.5.1"
rstest = "0.18.2"
