[package]
name = "libkepler-householder-macro"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[lib]
proc-macro = true

[dependencies]
itertools = "0.11.0"
proc-macro2 = "1.0.67"
quote = "1.0.33"
syn = "2.0.37"
