[package]
name = "libkepler-householder"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[dependencies]
num-traits = { workspace = true }
libkepler-householder-macro = { path = "../libkepler-householder-macro" }

[dev-dependencies]
approx = { workspace = true }
